--- a/style.css
+++ b/style.css
@@ -130,9 +130,11 @@ a {
     transition: all .2s cubic-bezier(0.4, 0, 0.4, 1);
 }
 
-a:hover {
-    color: var(--content-link-hover);
-}
+@media (hover: hover) {
+    a:hover {
+        color: var(--content-link-hover);
+    }
+  }
 
 /*
 a:visited {
