--- a/style.css
+++ b/style.css
@@ -132,6 +132,8 @@ a {
     white-space: nowrap;
     border-radius: 0.25rem;
     transition: all .2s cubic-bezier(0.4, 0, 0.4, 1);
+    
+    -webkit-tap-highlight-color: transparent;
 }
 
 @media (hover: hover) {
