--- a/style.css
+++ b/style.css
@@ -3,55 +3,56 @@
 /*Variables*/
 :root {
     /*base*/
-    --white01: hsl(343, 100%, 99%);
-    --white02: hsl(343, 28%, 93%);
-    --white03: hsl(343, 12%, 80%);
-    --white04: hsl(343, 18%, 85%);
-    --black01: hsl(0, 3%, 6%);
-    --black02: hsl(0, 3%, 26%);
-    --black03: hsl(0, 3%, 34%);
-    --accent01: hsl(346, 80%, 33%);
-    --blue-light: hsl(208, 49%, 50%);
-    --blue-dark: hsl(212, 60%, 32%);
+    --color-white01: hsl(343, 100%, 99%);
+    --color-white02: hsl(343, 28%, 93%);
+    --color-white03: hsl(343, 12%, 80%);
+    --color-white04: hsl(343, 18%, 85%);
+    --color-black01: hsl(0, 3%, 6%);
+    --color-black02: hsl(0, 3%, 26%);
+    --color-black03: hsl(0, 3%, 34%);
+    --color-accent01: hsl(346, 80%, 33%);
+    --color-blue-light: hsl(208, 49%, 50%);
+    --color-blue-dark: hsl(212, 60%, 32%);
 
     /*content*/
-    --content-primary-default: var(--black01);
-    --content-secondary-default: var(--black03);
-    --content-tertiary-default: var(--white01);
-    --content-quaternary-default: var(--black02);
+    --content-primary-default: var(--color-black01);
+    --content-secondary-default: var(--color-black03);
+    --content-tertiary-default: var(--color-white01);
+    --content-quaternary-default: var(--color-black02);
 
-    --content-accent-default: var(--accent01);
-    --content-action-default: var(--black01);
-    --content-action-hover: var(--black01);
+    --content-accent-default: var(--color-accent01);
+    --content-action-default: var(--color-black01);
+    --content-action-hover: var(--color-black01);
 
     /*link*/
-    --content-link-default: var(--blue-dark);
-    --content-link-hover: var(--blue-light);
+    --content-link-default: var(--color-blue-dark);
+    --content-link-hover: var(--color-blue-light);
 
     /*background*/
-    --background-primary-default: var(--white01);
-    --background-secondary-default: var(--white02);
-    --background-secondary-hover: var(--white03);
+    --background-primary-default: var(--color-white01);
+    --background-secondary-default: var(--color-white02);
+    --background-secondary-hover: var(--color-white03);
 
-    --background-accent-default: var(--accent01);
+    --background-accent-default: var(--color-accent01);
 
     /*border*/
-    --border-primary-default: var(--white04);
-    --border-secondary-default: var(--white03);
+    --border-primary-default: var(--color-white04);
+    --border-secondary-default: var(--color-white03);
     
-    --border-accent-default: var(--accent01);
-    --border-link-default: var(--blue-dark);
+    --border-accent-default: var(--color-accent01);
+    --border-link-default: var(--color-blue-dark);
 
     /*weight*/
-    --regular: 400;
-    --bold: 700;
+    --font-weight-regular: 400;
+    --font-weight-bold: 700;
 
     /*size*/
-    --bigger: 2rem;
-    --big: 1.5rem;
-    --medium: 1.125rem;
-    --basic: 1rem;
-    --small: 0.875rem;
+    --font-size-enormous: calc((52/16) * 1rem);
+    --font-size-bigger: calc((37/16) * 1rem);
+    --font-size-big: calc((26/16) * 1rem);
+    --font-size-medium: calc((22/16) * 1rem);
+    --font-size-basic: calc((17/16) * 1rem);
+    --font-size-small: calc((15/16) * 1rem);
 
     /*line*/
     --base-line: 0.125rem solid var(--border-primary-default);
@@ -67,7 +68,6 @@
     margin-inline-end: 0rem;
 
     /*font*/
-    font-size: 18px;
     font-family: "Space Mono", monospace;
     color: var(--content-primary-default);
 }
@@ -96,51 +96,58 @@ a {
 }
 
 /*Typefaces*/
+.big-title {
+    font-size: var(--font-size-enormous);
+    font-weight: var(--font-weight-bold);
+    font-style: normal;
+    margin: 2rem 0rem 1.5rem 0rem;
+}
+
 .basic-title {
-    font-size: var(--bigger);
-    font-weight: var(--bold);
+    font-size: var(--font-size-bigger);
+    font-weight: var(--font-weight-bold);
     font-style: normal;
     margin: 2rem 0rem 1.5rem 0rem;
 }
 
 .small-title {
-    font-size: var(--big);
-    font-weight: var(--bold);
+    font-size: var(--font-size-big);
+    font-weight: var(--font-weight-bold);
     font-style: normal;
     margin: 1rem 0rem 0.5rem 0rem;
 }
 
 .big-subtitle {
-    font-size: var(--medium);
-    font-weight: var(--bold);
+    font-size: var(--font-size-medium);
+    font-weight: var(--font-weight-bold);
     font-style: normal;
     margin: 2.5rem 0rem 0.5rem 0rem;
 }
 
 .basic-subtitle {
-    font-size: var(--basic);
-    font-weight: var(--bold);
+    font-size: var(--font-size-basic);
+    font-weight: var(--font-weight-bold);
     font-style: normal;
     margin: 1rem 0rem 1rem 0rem;
 }
 
 .small-subtitle {
-    font-size: var(--small);
-    font-weight: var(--bold);
+    font-size: var(--font-size-basic);
+    font-weight: var(--font-weight-bold);
     font-style: normal;
     margin: 1rem 0rem 0.5rem 0rem;
 }
 
 .basic-paragraph {
-    font-size: var(--basic);
-    font-weight: var(--regular);
+    font-size: var(--font-size-basic);
+    font-weight: var(--font-weight-regular);
     font-style: normal;
     margin: 0rem 0rem 1rem 0rem;
 }
 
 .small-paragraph {
-    font-size: var(--small);
-    font-weight: var(--regular);
+    font-size: var(--font-size-small);
+    font-weight: var(--font-weight-regular);
     font-style: normal;
 }
 
@@ -186,18 +193,23 @@ i, b {
     outline-color: var(--border-accent-default);
 }
 
+
 /*List*/
-ul {
-    margin-left: -0.5rem;
+.list {
+    padding-left: 2rem;
 }
 
-li {
-    font-size: var(--basic);
+.item-list {
+    font-size: var(--font-size-basic);
     line-height: 200%;
 }
 
-li::marker {
+.item-list::marker {
     color: var(--content-primary-default);
+}
+
+.item-list:first-child {
+    margin-top: 1rem;
 }
 
 /*Tag*/
@@ -208,6 +220,7 @@ li::marker {
     flex-wrap: wrap;
     gap: 0.5rem;
     margin: 0rem 0rem 1rem 0rem;
+    padding: 0rem;
 }
 
 .tag {
@@ -215,9 +228,10 @@ li::marker {
     border: var(--thin-line);
     border-color: var(--border-accent-default);
     border-radius: 0.25rem;
-    font-size: var(--small);
+    font-size: var(--font-size-basic);
     color: var(--content-accent-default);
     white-space: nowrap;
+    list-style-type: none
 }
 
 /*Contextual classes*/
@@ -235,7 +249,7 @@ li::marker {
 }
 
 .regular-weight {
-    font-weight: var(--regular);
+    font-weight: var(--font-weight-regular);
 }
 
 .align-right {
@@ -243,9 +257,6 @@ li::marker {
 }
 
 /*Content*/
-header {
-    padding: 0rem 0rem 1rem 0rem;
-}
 
 footer {
     gap: 0.5rem;
@@ -331,8 +342,15 @@ section:nth-child(n+1):not(:last-child) article {
 }
 
 @media (max-width: 800px) {
-    * {
-        font-size: 16px;
+
+    :root {
+        /*size*/
+        --font-size-enormous: calc((40/16) * 1rem);
+        --font-size-bigger: calc((30/16) * 1rem);
+        --font-size-big: calc((24/16) * 1rem);
+        --font-size-medium: calc((20/16) * 1rem);
+        --font-size-basic: calc((16/16) * 1rem);
+        --font-size-small: calc((14/16) * 1rem);
     }
 
     body {
