--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ i, b {
 
 /*Button*/
 .nav-button {
+    font-size: var(--font-size-basic);
     background: var(--background-secondary-default);
     text-decoration: none;
     padding: 0.25rem 1rem;
