--- a/style.css
+++ b/style.css
@@ -1,75 +1,123 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-   
+
 /*Variables*/
 :root {
-    /*base*/
-    --color-white01: hsl(343, 100%, 99%);
-    --color-white02: hsl(343, 28%, 93%);
-    --color-white03: hsl(343, 12%, 80%);
-    --color-white04: hsl(343, 18%, 85%);
-    --color-black01: hsl(0, 3%, 6%);
-    --color-black02: hsl(0, 3%, 26%);
-    --color-black03: hsl(0, 3%, 34%);
-    --color-accent01: hsl(346, 80%, 33%);
-    --color-blue-light: hsl(208, 49%, 50%);
-    --color-blue-dark: hsl(212, 60%, 32%);
-
-    /*content*/
-    --content-primary-default: var(--color-black01);
-    --content-secondary-default: var(--color-black03);
-    --content-tertiary-default: var(--color-white01);
-    --content-quaternary-default: var(--color-black02);
-
-    --content-accent-default: var(--color-accent01);
-    --content-action-default: var(--color-black01);
-    --content-action-hover: var(--color-black01);
-
-    /*link*/
-    --content-link-default: var(--color-blue-dark);
-    --content-link-hover: var(--color-blue-light);
-
-    /*background*/
-    --background-primary-default: var(--color-white01);
-    --background-secondary-default: var(--color-white02);
-    --background-secondary-hover: var(--color-white03);
-
-    --background-accent-default: var(--color-accent01);
-
-    /*border*/
-    --border-primary-default: var(--color-white04);
-    --border-secondary-default: var(--color-white03);
-    
-    --border-accent-default: var(--color-accent01);
-    --border-link-default: var(--color-blue-dark);
-
     /*weight*/
     --font-weight-regular: 400;
     --font-weight-bold: 700;
 
     /*size*/
-    --font-size-enormous: calc((52/16) * 1rem);
-    --font-size-bigger: calc((37/16) * 1rem);
-    --font-size-big: calc((26/16) * 1rem);
-    --font-size-medium: calc((22/16) * 1rem);
-    --font-size-basic: calc((17/16) * 1rem);
-    --font-size-small: calc((15/16) * 1rem);
+    --font-size-enormous: calc((52 / 16) * 1rem);
+    --font-size-bigger: calc((37 / 16) * 1rem);
+    --font-size-big: calc((26 / 16) * 1rem);
+    --font-size-medium: calc((22 / 16) * 1rem);
+    --font-size-basic: calc((17 / 16) * 1rem);
+    --font-size-small: calc((15 / 16) * 1rem);
+
+    --letter-spacing-none: 0rem;
+    --letter-spacing-small: calc((0.15 / 16) * 1rem);
+    --letter-spacing-medium: calc((0.25 / 16) * 1rem);
+    --letter-spacing-big: calc((0.5 / 16) * 1rem);
 
     /*line*/
-    --base-line: 0.125rem solid var(--border-primary-default);
-    --thin-line: 0.0625rem solid var(--border-primary-default);
+    --base-line: calc((2 / 16) * 1rem) solid var(--border-primary-default);
+    --thin-line: calc((1 / 16) * 1rem) solid var(--border-primary-default);
+
+    /*transition*/
+    --base-transition: all .2s cubic-bezier(0.4, 0, 0.4, 1);
+}
+
+/*color-schemes*/
+[data-theme="light"] {
+    /*lightmode-content-colors*/
+    --content-primary-default: #100f0f;
+    --content-secondary-default: #595454;
+    --content-tertiary-default: #fffafb;
+    --content-quaternary-default: #444040;
+
+    --content-accent-default: #971130;
+    --content-action-default: #100f0f;
+    --content-action-hover: #100f0f;
+
+    /*lightmode-link-colors*/
+    --content-link-default: #214e83;
+    --content-link-hover: #4184be;
+
+    /*lightmode-background-colors*/
+    --background-primary-default: #fffafb;
+    --background-secondary-default: #f2e8eb;
+    --background-secondary-hover: #d2c6c9;
+
+
+    --background-accent-default: #971130;
+
+    /*lightmode-border-colors*/
+    --border-primary-default: #e0d2d6;
+    --border-secondary-default: #d2c6c9;
+    --border-tertiary-default: #100f0f;
+
+    --border-accent-default: #971130;
+    --border-link-default: #214e83;
+}
+
+[data-theme="dark"] {
+    /*darkmode-content-colors*/
+    --content-primary-default: #f0efef;
+    --content-secondary-default: #aba6a6;
+    --content-tertiary-default: #0f0003;
+    --content-quaternary-default: #bfbbbb;
+
+    --content-accent-default: #f792a9;
+    --content-action-default: #f0efef;
+    --content-action-hover: #f0efef;
+
+    /*darkmode-link-colors*/
+    --content-link-default: #89b2e1;
+    --content-link-hover: #4783b8;
+
+    /*darkmode-background-colors*/
+    --background-primary-default: #160d10;
+    --background-secondary-default: #2D2023;
+    --background-secondary-hover: #392D30;
+
+    --background-accent-default: #f792a9;
+
+    /*darkmode-border-colors*/
+    --border-primary-default: #2d2023;
+    --border-secondary-default: #392d30;
+    --border-tertiary-default: #f0efef;
+    
+    --border-accent-default: #f792a9;
+    --border-link-default: #89b2e1;
 }
 
 /*Global properties*/
 * {
     /*margin-reset*/
-    margin-block-start: 0rem;
-    margin-block-end: 0rem;
-    margin-inline-start: 0rem;
-    margin-inline-end: 0rem;
+    -webkit-margin-before: 0rem;
+            margin-block-start: 0rem;
+    -webkit-margin-after: 0rem;
+            margin-block-end: 0rem;
+    -webkit-margin-start: 0rem;
+            margin-inline-start: 0rem;
+    -webkit-margin-end: 0rem;
+            margin-inline-end: 0rem;
 
     /*font*/
-    font-family: "Space Mono", monospace;
+    font-family: "Space Mono", monospace, "Geneva", Verdana, sans-serif;
     color: var(--content-primary-default);
+}
+
+*, *::before, *::after {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 html {
@@ -77,13 +125,23 @@ html {
 }
 
 body {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 100%;
     padding: 2.5rem 5rem 0rem 5rem;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     margin: 0 auto;
     background: var(--background-primary-default);
 }
@@ -95,10 +153,26 @@ a {
     -webkit-tap-highlight-color: transparent;
 }
 
+button {
+    font-size: inherit;
+    font-weight: inherit;
+    border: none;
+    outline: none;
+    -webkit-tap-highlight-color: transparent;
+}
+
+:focus, :focus-visible {
+    border-radius: 0.25rem !important;
+    outline: var(--base-line);
+    outline-color: var(--border-tertiary-default);
+}
+
 /*Typefaces*/
 .big-title {
     font-size: var(--font-size-enormous);
     font-weight: var(--font-weight-bold);
+    letter-spacing: var(--letter-spacing-none);
+    line-height: 135%;
     font-style: normal;
     margin: 2rem 0rem 1.5rem 0rem;
 }
@@ -106,6 +180,8 @@ a {
 .basic-title {
     font-size: var(--font-size-bigger);
     font-weight: var(--font-weight-bold);
+    letter-spacing: var(--letter-spacing-medium);
+    line-height: 135%;
     font-style: normal;
     margin: 2rem 0rem 1.5rem 0rem;
 }
@@ -113,6 +189,8 @@ a {
 .small-title {
     font-size: var(--font-size-big);
     font-weight: var(--font-weight-bold);
+    letter-spacing: var(--letter-spacing-none);
+    line-height: 135%;
     font-style: normal;
     margin: 1rem 0rem 0.5rem 0rem;
 }
@@ -120,6 +198,8 @@ a {
 .big-subtitle {
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-bold);
+    letter-spacing: var(--letter-spacing-small);
+    line-height: 135%;
     font-style: normal;
     margin: 2.5rem 0rem 0.5rem 0rem;
 }
@@ -127,13 +207,8 @@ a {
 .basic-subtitle {
     font-size: var(--font-size-basic);
     font-weight: var(--font-weight-bold);
-    font-style: normal;
-    margin: 1rem 0rem 1rem 0rem;
-}
-
-.small-subtitle {
-    font-size: var(--font-size-basic);
-    font-weight: var(--font-weight-bold);
+    letter-spacing: var(--letter-spacing-small);
+    line-height: 150%;
     font-style: normal;
     margin: 1rem 0rem 0.5rem 0rem;
 }
@@ -141,6 +216,8 @@ a {
 .basic-paragraph {
     font-size: var(--font-size-basic);
     font-weight: var(--font-weight-regular);
+    letter-spacing: var(--letter-spacing-big);
+    line-height: 150%;
     font-style: normal;
     margin: 0rem 0rem 1rem 0rem;
 }
@@ -148,6 +225,8 @@ a {
 .small-paragraph {
     font-size: var(--font-size-small);
     font-weight: var(--font-weight-regular);
+    letter-spacing: var(--letter-spacing-medium);
+    line-height: 150%;
     font-style: normal;
 }
 
@@ -156,44 +235,116 @@ i, b {
     color: inherit;
 }
 
+/*Switch*/
+.theme-switch {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 2rem;
+    width: 4rem;
+    border-radius: 2rem;
+}
+
+.theme-switch input {
+    display:none;
+}
+
+.slider {
+    cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 2rem;
+    width: 4rem;
+    background-color: var(--background-accent-default);
+    padding: 0rem 0.25rem 0rem 0.25rem;
+    -webkit-transition: var(--base-transition);
+    -o-transition: var(--base-transition);
+    transition: var(--base-transition);
+}
+
+.slider:before {
+    background-image: url('assets/light.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    background-color: var(--background-primary-default);
+    content: "";
+    width: 1.5rem;
+    height: 1.5rem;
+    -webkit-transition: var(--base-transition);
+    -o-transition: var(--base-transition);
+    transition: var(--base-transition);
+}
+
+input:checked + .slider {
+    background-color: var(--background-accent-default);
+}
+
+input:checked + .slider:before {
+    background-image: url('assets/dark.png');
+    -webkit-transform: translateX(2rem);
+        -ms-transform: translateX(2rem);
+            transform: translateX(2rem);
+}
+
+.slider.round, .slider.round:before {
+    border-radius: 2rem;
+}
+
 /*Link*/
 .link {
     border-radius: 0.25rem;
     color: var(--content-link-default);
-    transition: all .2s cubic-bezier(0.4, 0, 0.4, 1);
+    -webkit-transition: var(--base-transition);
+         -o-transition: var(--base-transition);
+            transition: var(--base-transition);
 }
 
-.link:focus {
-    outline: var(--base-line);
-    outline-color: var(--border-link-default);
-}
-
-.link:focus-visible {
-    outline: var(--base-line);
-    outline-color: var(--border-link-default);
-}
-
-/*Button*/
+/*Buttons*/
 .nav-button {
-    font-size: var(--font-size-basic);
     background: var(--background-secondary-default);
     text-decoration: none;
     padding: 0.25rem 1rem;
     border-radius: 2rem;
     color: var(--content-action-default);
-    transition: all .2s cubic-bezier(0.4, 0, 0.4, 1);
+    -webkit-transition: var(--base-transition);
+         -o-transition: var(--base-transition);
+            transition: var(--base-transition);
 }
 
-.nav-button:focus {
-    outline: var(--base-line);
-    outline-color: var(--border-accent-default);
+.copy-button {
+    cursor: pointer;
+    background: var(--background-secondary-default);
+    text-decoration: none;
+    padding: 0.125rem 0.5rem;
+    border-radius: 2rem;
+    color: var(--content-action-default);
+    -webkit-transition: var(--base-transition);
+         -o-transition: var(--base-transition);
+            transition: var(--base-transition);
+    vertical-align: middle;
 }
-
-.nav-button:focus-visible {
-    outline: var(--base-line);
-    outline-color: var(--border-accent-default);
-}
-
 
 /*List*/
 .list {
@@ -213,12 +364,19 @@ i, b {
     margin-top: 1rem;
 }
 
-/*Tag*/
+/*Tag list*/
 .tag-group {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     gap: 0.5rem;
     margin: 0rem 0rem 1rem 0rem;
     padding: 0rem;
@@ -235,6 +393,42 @@ i, b {
     list-style-type: none
 }
 
+/*Info list*/
+.info-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 2rem;
+    padding: 0rem;
+}
+
+.info-list-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 1rem;
+    list-style-type: none;
+    margin: 0rem;
+}
+
 /*Contextual classes*/
 .emojis {
     color: inherit;
@@ -245,7 +439,7 @@ i, b {
     color: var(--content-accent-default);
 }
 
-.secondary-color {
+.content-secondary {
     color: var(--content-secondary-default);
 }
 
@@ -254,18 +448,18 @@ i, b {
 }
 
 .align-right {
-    align-self: flex-end;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
 }
 
 /*Content*/
-
 footer {
     gap: 0.5rem;
     padding: 1rem 0rem 2.5rem 0rem;
 }
 
 article {
-    padding: 0rem 0rem 1rem 0rem;
+    padding: 0rem 1rem 1rem 1rem;
     margin: 1rem 0rem 1rem 0rem;
 }
 
@@ -277,10 +471,19 @@ section {
 .container {
     width: 100%;
     max-width: 1000px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .highlighted  {
@@ -288,19 +491,17 @@ section {
     padding: 3rem 2.5rem;
     border-radius: 1.5rem;
     margin: 2rem 0rem 2rem -2.5rem;
+    -webkit-box-sizing: content-box;
+            box-sizing: content-box;
 }
 
-.highlighted .description {
-    border-color: var(--border-secondary-default);
+/*Especial*/
+.info-list-item .basic-paragraph {
+    margin: 0rem;
 }
 
-.highlighted .basic-paragraph, .highlighted .secondary-color {
+.highlighted .content-secondary {
     color: var(--content-quaternary-default);
-}
-
-/*Layout corrections*/
-article p {
-    color: var(--content-secondary-default);
 }
 
 main section:first-child {
@@ -318,17 +519,39 @@ footer nav {
 
 /*Animation*/
 section:nth-child(n+1):not(:last-child) article {
-    animation-name: scroll;
+    -webkit-animation-name: scroll;
+            animation-name: scroll;
     animation-timeline: view();
     animation-range-start: cover 10%;
     animation-range-end: cover 50%;
-    animation-fill-mode: both;
-    animation-duration: 1ms;
+    -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+    -webkit-animation-duration: 1ms;
+            animation-duration: 1ms;
+}
+
+@-webkit-keyframes scroll {
+    0% {
+        -webkit-transform: translateY(4rem);
+                transform: translateY(4rem);
+    }
+
+    100% {
+        -webkit-transform: translateY(0rem);
+                transform: translateY(0rem);
+    }
 }
 
 @keyframes scroll {
-    0% {transform: translateY(4rem);}
-    100% {transform: translateY(0rem);}
+    0% {
+        -webkit-transform: translateY(4rem);
+                transform: translateY(4rem);
+    }
+
+    100% {
+        -webkit-transform: translateY(0rem);
+                transform: translateY(0rem);
+    }
 }
 
 /*Media query*/
@@ -336,22 +559,27 @@ section:nth-child(n+1):not(:last-child) article {
     a:hover {
         color: var(--content-link-hover);
     }
+
     .nav-button:hover {
+        background: var(--background-secondary-hover);
+        color: var(--content-action-hover);
+    }
+
+    .copy-button:hover {
         background: var(--background-secondary-hover);
         color: var(--content-action-hover);
     }
 }
 
 @media (max-width: 800px) {
-
     :root {
         /*size*/
-        --font-size-enormous: calc((40/16) * 1rem);
-        --font-size-bigger: calc((30/16) * 1rem);
-        --font-size-big: calc((24/16) * 1rem);
-        --font-size-medium: calc((20/16) * 1rem);
-        --font-size-basic: calc((16/16) * 1rem);
-        --font-size-small: calc((14/16) * 1rem);
+        --font-size-enormous: calc((40 / 16) * 1rem);
+        --font-size-bigger: calc((30 / 16) * 1rem);
+        --font-size-big: calc((24 / 16) * 1rem);
+        --font-size-medium: calc((20 / 16) * 1rem);
+        --font-size-basic: calc((16 / 16) * 1rem);
+        --font-size-small: calc((14 / 16) * 1rem);
     }
 
     body {
@@ -363,15 +591,17 @@ section:nth-child(n+1):not(:last-child) article {
     }
 
     .highlighted {
-        padding: 2.5rem 1.5rem;
+        padding: 2.5rem 1.5rem 2.5rem 1.5rem;
         margin-left: -1.5rem;
     }
-
 }
 
 @media (prefers-reduced-motion) {
     * {
-        animation: none !important;
-        transition: none !important;
+        -webkit-animation: none !important;
+                animation: none !important;
+        -webkit-transition: none !important;
+             -o-transition: none !important;
+                transition: none !important;
     }
 }
