--- a/style.css
+++ b/style.css
@@ -154,6 +154,19 @@ a {
 }
 
 button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     font-size: inherit;
     font-weight: inherit;
     border: none;
@@ -333,6 +346,7 @@ input:checked + .slider:before {
 }
 
 .copy-button {
+    gap: 0.5rem;
     cursor: pointer;
     background: var(--background-secondary-default);
     text-decoration: none;
