--- a/style.css
+++ b/style.css
@@ -55,7 +55,6 @@
     --background-secondary-default: #f2e8eb;
     --background-secondary-hover: #d2c6c9;
 
-
     --background-accent-default: #971130;
 
     /*lightmode-border-colors*/
@@ -365,6 +364,20 @@ input:checked + .slider:before {
     vertical-align: middle;
 }
 
+.copy-button-success {
+    gap: 0.5rem;
+    cursor: pointer;
+    background: var(--background-accent-default);
+    text-decoration: none;
+    padding: 0.125rem 0.5rem;
+    border-radius: 2rem;
+    color: var(--content-action-default);
+    -webkit-transition: var(--base-transition);
+         -o-transition: var(--base-transition);
+            transition: var(--base-transition);
+    vertical-align: middle;
+}
+
 /*List*/
 .list {
     padding-left: 2rem;
@@ -507,9 +520,9 @@ section {
 
 .highlighted  {
     background: var(--background-secondary-default);
-    padding: 3rem 2.5rem;
+    padding: 4rem 4rem;
     border-radius: 1.5rem;
-    margin: 2rem 0rem 2rem -2.5rem;
+    margin: 2rem 0rem 2rem -4rem;
     -webkit-box-sizing: content-box;
             box-sizing: content-box;
 }
