--- a/style.css
+++ b/style.css
@@ -457,7 +457,7 @@ input:checked + .slider:before {
 }
 
 /*Contextual classes*/
-.emojis {
+.emoji {
     font-family: "Noto Color Emoji", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -465,7 +465,7 @@ input:checked + .slider:before {
     color: var(--content-accent-default);
 }
 
-.icons {
+.icon {
     font-family: inherit;
     font-weight: inherit;
     font-style: normal;
