--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ a, button, label {
 }
 
 a, button {
+    cursor: pointer;
     font-size: inherit;
     font-weight: inherit;
     white-space: nowrap;
@@ -525,6 +526,60 @@ section {
             box-sizing: content-box;
 }
 
+/*Dialog*/
+dialog {
+    display: none;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: absolute;
+    inset-inline-start: 0rem;
+    inset-inline-end: 0rem;
+    width: 100%;
+    height: fit-content;
+    background-color: var(--background-primary-default);
+    color: inherit;
+    margin: auto;
+    border: none;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+dialog[open] {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+dialog:-internal-dialog-in-top-layer::backdrop {
+    position: fixed;
+    inset: 0rem;
+    background: var(--content-primary-default);
+    opacity: .5;
+}
+
+dialog:-internal-dialog-in-top-layer {
+    position: fixed;
+    inset-block-start: 0rem;
+    inset-block-end: 0rem;
+    max-width: 800px;
+    max-height: auto;
+    user-select: text;
+    visibility: visible;
+    overflow: auto;
+}
+
+dialog:modal {
+    overlay: auto !important;
+}
+
 /*Especial*/
 .info-list-item .basic-paragraph {
     margin: 0rem;
@@ -623,6 +678,76 @@ section:nth-child(n+1):not(:last-child) article {
     .highlighted {
         padding: 2.5rem 1.5rem 2.5rem 1.5rem;
         margin-left: -1.5rem;
+    }
+
+    dialog {
+        display: none;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: flex-start;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        gap: 1rem;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        inset-inline-start: unset;
+        inset-inline-end: 0rem;
+        width: 100%;
+        height: fit-content;
+        background-color: var(--background-primary-default);
+        color: inherit;
+        margin: auto;
+        border: none;
+        padding: 3rem 2rem 2rem 2rem;
+        border-radius: 1rem 1rem 0rem 0rem;
+    }
+    
+    dialog[open] {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        animation: dialog .2s linear forwards 1;
+    }
+
+    @keyframes dialog {
+        from {
+            transform: translateY(12rem);
+        }
+        to {
+            transform: translateY(0rem);
+        }
+    }
+    
+    dialog:-internal-dialog-in-top-layer::backdrop {
+        position: fixed;
+        inset: 0rem;
+        background: var(--content-primary-default);
+        opacity: .8;
+    }
+    
+    dialog:-internal-dialog-in-top-layer {
+        position: fixed;
+        inset-block-start: unset;
+        inset-block-end: 0rem;
+        max-width: 800px;
+        max-height: fit-content;
+        user-select: text;
+        visibility: visible;
+        overflow: auto;
+    }
+    
+    dialog:modal {
+        overlay: auto !important;
+    }
+
+    dialog button {
+        width: 100%;
     }
 }
 
